--- a/AuthenticationApi/appsettings.json
+++ b/AuthenticationApi/appsettings.json
@@ -1,5 +1,28 @@
 {
   "AllowedHosts": "*",
+  "Authentication": {
+    "DefaultScheme": "LocalAuthIssuer",
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "https://localhost:7027",
+          "http://localhost:5041",
+          "https://localhost:7013",
+          "https://localhost:5035"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      },
+      "LocalAuthIssuer": {
+        "ValidAudiences": [
+          "https://localhost:7027",
+          "http://localhost:5041",
+          "https://localhost:7013",
+          "https://localhost:5035"
+        ],
+        "ValidIssuer": "local-auth"
+      }
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=IdentityDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
@@ -8,10 +31,5 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "Jwt": {
-    "Issuer": "YourIssuer",
-    "Audience": "YourAudience",
-    "Key": "YourSuperSecretKey" // This should be a long, secure key
   }
 }
